--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - image: cimg/node:15.1
     steps:
       - checkout 
-      - run: npm install
+      - node/install-packages
       - run: npm test 
 
 workflow:
