--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,31 +36,12 @@
 #       # - node/test
 
 
-# version: 2.1
 
-# orbs: 
-#   node: circleci/node@4.5.1
-
-# jobs: 
-#   build-and-test:
-#     docker:
-#       - image: cimg/node:15.1
-#     steps:
-#       - checkout 
-#       - node/install-packages
-#       - run: npm test 
-
-# workflow:
-#   sample-work-flow:
-#     jobs:
-#       - build-and-test 
-
-
+#######
 version: 2.1
 
 orbs:
   node: circleci/node@4.1
-
 
 jobs:
   build-and-test:  
@@ -68,7 +49,7 @@ jobs:
       - image: cimg/node:15.1
     steps:
       - checkout
-      - node/install-packages 
+      - run: npm install
       - run: npm test
 
 workflows:
